homework-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: monitoring.arch.homework
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prom-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.arch.homework
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: prom-kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alerts-ingress
  namespace: monitoring
  labels:
    name: alerts-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: alerts.arch.homework
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
